--- a/contact-us.html
+++ b/contact-us.html
@@ -272,7 +272,7 @@
           <div class="row gy-6 gy-lg-0">
             <div class="col-lg-4">
               <div class="widget">
-                <p class="fw-bold fs-22">bizzmakr</p>
+                <p class="fw-bold fs-22">Bizzmakr</p>
                 <p class="mb-3">We believe that talent should never go unnoticed and that opportunity should never be out of reach. Every skill has the power to make an impact.</p>
                 <p class="mb-4">Trade license number: 05-138-04863</p>
                 <nav class="nav social">
@@ -353,7 +353,7 @@
               <!-- /.widget -->
             </div>
             <!-- /column -->
-            <div class="col-md-4 col-lg-2">
+            <div class="col-md-4 col-lg-3">
               <div class="widget">
                 <h4 class="widget-title mb-3">Business</h4>
                 <ul class="list-unstyled text-reset mb-0">
@@ -390,12 +390,21 @@
                       Refund Policy
                     </a>
                   </li>
+
+                  <li>
+                    <a href="terms-conditions.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Terms and Conditions
+                    </a>
+                  </li>
                 </ul>
               </div>
               <!-- /.widget -->
             </div>
             <!-- /column -->
-            <div class="col-md-4 col-lg-4">
+            <div class="col-md-4 col-lg-3">
               <div class="widget">
                 <h4 class="widget-title mb-3">Contact Us</h4>
                 <div class="d-flex align-items-center gap-3 bg-soft-blue rounded-3 p-2 mb-3">
@@ -448,7 +457,7 @@
         </div>
         <!-- /.container -->
         <div class="container-fluid bg-primary py-1">
-          <p class="mb-0 text-center px-4 text-white fs-26 fs-sm-65 fw-800">bizzmakr</p>
+          <p class="mb-0 text-center px-4 text-white fs-26 fs-sm-65 fw-800">Bizzmakr</p>
         </div>
         <!-- /.container -->
       </footer>
