--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -1246,7 +1246,7 @@
           <div class="row gy-6 gy-lg-0">
             <div class="col-lg-4">
               <div class="widget">
-                <p class="fw-bold fs-22">bizzmakr</p>
+                <p class="fw-bold fs-22">Bizzmakr</p>
                 <p class="mb-3">We believe that talent should never go unnoticed and that opportunity should never be out of reach. Every skill has the power to make an impact.</p>
                 <p class="mb-4">Trade license number: 05-138-04863</p>
                 <nav class="nav social">
@@ -1327,7 +1327,7 @@
               <!-- /.widget -->
             </div>
             <!-- /column -->
-            <div class="col-md-4 col-lg-2">
+            <div class="col-md-4 col-lg-3">
               <div class="widget">
                 <h4 class="widget-title mb-3">Business</h4>
                 <ul class="list-unstyled text-reset mb-0">
@@ -1364,12 +1364,21 @@
                       Refund Policy
                     </a>
                   </li>
+
+                  <li>
+                    <a href="terms-conditions.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Terms and Conditions
+                    </a>
+                  </li>
                 </ul>
               </div>
               <!-- /.widget -->
             </div>
             <!-- /column -->
-            <div class="col-md-4 col-lg-4">
+            <div class="col-md-4 col-lg-3">
               <div class="widget">
                 <h4 class="widget-title mb-3">Contact Us</h4>
                 <div class="d-flex align-items-center gap-3 bg-soft-blue rounded-3 p-2 mb-3">
@@ -1422,7 +1431,200 @@
         </div>
         <!-- /.container -->
         <div class="container-fluid bg-primary py-1">
-          <p class="mb-0 text-center px-4 text-white fs-26 fs-sm-65 fw-800">bizzmakr</p>
+          <p class="mb-0 text-center px-4 text-white fs-26 fs-sm-65 fw-800">Bizzmakr</p>
+        </div>
+        <!-- /.container -->
+      </footer><footer class="footer-bg">
+        <div class="container pt-8 pt-md-15 pb-7">
+          <div class="row gy-6 gy-lg-0">
+            <div class="col-lg-4">
+              <div class="widget">
+                <p class="fw-bold fs-22">Bizzmakr</p>
+                <p class="mb-3">We believe that talent should never go unnoticed and that opportunity should never be out of reach. Every skill has the power to make an impact.</p>
+                <p class="mb-4">Trade license number: 05-138-04863</p>
+                <nav class="nav social">
+                  <a href="https://www.linkedin.com/company/bizzmakr/" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="35" height="35" viewBox="0 0 50 50">
+                      <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"></path>
+                    </svg>
+                  </a>
+                  <a href=" https://www.instagram.com/bizzmakr/profilecard/?igsh=MXVpZTY1bjN5eGh6bg==" target="_blank">
+                    <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M19 4.75C15.1297 4.75 14.6452 4.76615 13.1252 4.8355C11.608 4.90485 10.5716 5.14615 9.6653 5.4986C8.7153 5.8558 7.85365 6.4163 7.14115 7.1421C6.41651 7.85378 5.85567 8.71482 5.49765 9.6653C5.1471 10.5716 4.90485 11.609 4.8355 13.1262C4.7671 14.6452 4.75 15.1287 4.75 19C4.75 22.8713 4.76615 23.3548 4.8355 24.8748C4.90485 26.392 5.14615 27.4284 5.4986 28.3347C5.8558 29.2847 6.4163 30.1463 7.1421 30.8588C7.8538 31.5835 8.71483 32.1443 9.6653 32.5023C10.5716 32.8538 11.608 33.0951 13.1252 33.1645C14.6452 33.2338 15.1297 33.25 19 33.25C22.8703 33.25 23.3548 33.2338 24.8748 33.1645C26.392 33.0951 27.4284 32.8538 28.3347 32.5014C29.2847 32.1442 30.1463 31.5837 30.8588 30.8579C31.5835 30.1462 32.1443 29.2852 32.5023 28.3347C32.8538 27.4284 33.0951 26.392 33.1645 24.8748C33.2338 23.3548 33.25 22.8703 33.25 19C33.25 15.1297 33.2338 14.6452 33.1645 13.1252C33.0951 11.608 32.8538 10.5716 32.5014 9.6653C32.1436 8.71441 31.5828 7.853 30.8579 7.14115C30.1462 6.41651 29.2852 5.85567 28.3347 5.49765C27.4284 5.1471 26.391 4.90485 24.8738 4.8355C23.3548 4.7671 22.8713 4.75 19 4.75ZM19 7.31785C22.8048 7.31785 23.256 7.3321 24.7589 7.4005C26.1478 7.46415 26.9021 7.695 27.4046 7.89165C28.0697 8.1491 28.5447 8.4588 29.0434 8.9566C29.5422 9.45535 29.8509 9.93035 30.1084 10.5953C30.3041 11.0979 30.5358 11.8522 30.5995 13.2411C30.6679 14.744 30.6821 15.1952 30.6821 19C30.6821 22.8048 30.6679 23.256 30.5995 24.7589C30.5358 26.1478 30.305 26.9021 30.1084 27.4046C29.8803 28.0236 29.5164 28.5836 29.0434 29.0434C28.5837 29.5165 28.0237 29.8804 27.4046 30.1084C26.9021 30.3041 26.1478 30.5358 24.7589 30.5995C23.256 30.6679 22.8057 30.6821 19 30.6821C15.1943 30.6821 14.744 30.6679 13.2411 30.5995C11.8522 30.5358 11.0979 30.305 10.5953 30.1084C9.97638 29.8803 9.41641 29.5164 8.9566 29.0434C8.48367 28.5836 8.11977 28.0236 7.89165 27.4046C7.69595 26.9021 7.46415 26.1478 7.4005 24.7589C7.3321 23.256 7.31785 22.8048 7.31785 19C7.31785 15.1952 7.3321 14.744 7.4005 13.2411C7.46415 11.8522 7.695 11.0979 7.89165 10.5953C8.1491 9.93035 8.4588 9.45535 8.9566 8.9566C9.41634 8.48354 9.97634 8.11963 10.5953 7.89165C11.0979 7.69595 11.8522 7.46415 13.2411 7.4005C14.744 7.3321 15.1952 7.31785 19 7.31785Z"
+                        fill="black"
+                      />
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M19.0003 23.7547C18.3759 23.7547 17.7576 23.6317 17.1807 23.3927C16.6038 23.1538 16.0797 22.8035 15.6382 22.362C15.1966 21.9205 14.8464 21.3963 14.6075 20.8195C14.3685 20.2426 14.2455 19.6243 14.2455 18.9999C14.2455 18.3755 14.3685 17.7572 14.6075 17.1803C14.8464 16.6035 15.1966 16.0793 15.6382 15.6378C16.0797 15.1963 16.6038 14.846 17.1807 14.6071C17.7576 14.3681 18.3759 14.2452 19.0003 14.2452C20.2613 14.2452 21.4707 14.7461 22.3624 15.6378C23.2541 16.5295 23.755 17.7389 23.755 18.9999C23.755 20.2609 23.2541 21.4703 22.3624 22.362C21.4707 23.2537 20.2613 23.7547 19.0003 23.7547ZM19.0003 11.6754C17.0577 11.6754 15.1947 12.4471 13.8211 13.8207C12.4475 15.1943 11.6758 17.0573 11.6758 18.9999C11.6758 20.9425 12.4475 22.8055 13.8211 24.1791C15.1947 25.5527 17.0577 26.3244 19.0003 26.3244C20.9429 26.3244 22.8059 25.5527 24.1795 24.1791C25.5531 22.8055 26.3248 20.9425 26.3248 18.9999C26.3248 17.0573 25.5531 15.1943 24.1795 13.8207C22.8059 12.4471 20.9429 11.6754 19.0003 11.6754ZM28.4556 11.5424C28.4556 12.0016 28.2732 12.442 27.9485 12.7667C27.6238 13.0914 27.1834 13.2738 26.7243 13.2738C26.2651 13.2738 25.8247 13.0914 25.5 12.7667C25.1753 12.442 24.9929 12.0016 24.9929 11.5424C24.9929 11.0832 25.1753 10.6428 25.5 10.3181C25.8247 9.99345 26.2651 9.81104 26.7243 9.81104C27.1834 9.81104 27.6238 9.99345 27.9485 10.3181C28.2732 10.6428 28.4556 11.0832 28.4556 11.5424Z"
+                        fill="black"
+                      />
+                    </svg>
+                  </a>
+                  <a href="https://www.facebook.com/profile.php?id=100093363890265" target="_blank">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M31.8337 16.0961C31.8337 7.29808 24.7456 0.166748 16.0003 0.166748C7.25505 0.166748 0.166992 7.29808 0.166992 16.0961C0.166992 24.0487 5.95566 30.6385 13.5261 31.8334V20.7015H9.50655V16.0951H13.5261V12.5864C13.5261 8.5943 15.8895 6.38819 19.5069 6.38819C21.238 6.38819 23.0514 6.69958 23.0514 6.69958V10.6199H21.0533C19.0868 10.6199 18.4745 11.8486 18.4745 13.1089V16.0961H22.8657L22.1637 20.7005H18.4745V31.8334C26.045 30.6385 31.8337 24.0487 31.8337 16.0961Z" fill="black" />
+                    </svg>
+                  </a>
+                  <a href="https://x.com/bizzmakr?s=21&t=PYq3mFj63ErKW3GGwfvi7A" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="35" height="35" viewBox="0 0 50 50">
+                      <path d="M 11 4 C 7.134 4 4 7.134 4 11 L 4 39 C 4 42.866 7.134 46 11 46 L 39 46 C 42.866 46 46 42.866 46 39 L 46 11 C 46 7.134 42.866 4 39 4 L 11 4 z M 13.085938 13 L 21.023438 13 L 26.660156 21.009766 L 33.5 13 L 36 13 L 27.789062 22.613281 L 37.914062 37 L 29.978516 37 L 23.4375 27.707031 L 15.5 37 L 13 37 L 22.308594 26.103516 L 13.085938 13 z M 16.914062 15 L 31.021484 35 L 34.085938 35 L 19.978516 15 L 16.914062 15 z"></path>
+                    </svg>
+                  </a>
+                </nav>
+              </div>
+              <!-- /.widget -->
+            </div>
+            <!-- /column -->
+            <div class="col-md-4 col-lg-2">
+              <div class="widget">
+                <h4 class="widget-title mb-3">About us</h4>
+                <ul class="list-unstyled text-reset mb-0">
+                  <li>
+                    <a href="./">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Home
+                    </a>
+                  </li>
+                  <li>
+                    <a href="about-us.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      About us
+                    </a>
+                  </li>
+                  <li>
+                    <a href="how-it-works.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      How it Works
+                    </a>
+                  </li>
+                  <li>
+                    <a href="pricing.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Pricing
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- /.widget -->
+            </div>
+            <!-- /column -->
+            <div class="col-md-4 col-lg-3">
+              <div class="widget">
+                <h4 class="widget-title mb-3">Business</h4>
+                <ul class="list-unstyled text-reset mb-0">
+                  <li>
+                    <a href="features.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Features
+                    </a>
+                  </li>
+                  <li>
+                    <a href="contact-us.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Support
+                    </a>
+                  </li>
+                  <li>
+                    <a href="privacy-policy.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Privacy Policy
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="refund-policy.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Refund Policy
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="terms-conditions.html">
+                      <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.375 4.25L11.625 9.5L6.375 14.75" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      Terms and Conditions
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- /.widget -->
+            </div>
+            <!-- /column -->
+            <div class="col-md-4 col-lg-3">
+              <div class="widget">
+                <h4 class="widget-title mb-3">Contact Us</h4>
+                <div class="d-flex align-items-center gap-3 bg-soft-blue rounded-3 p-2 mb-3">
+                  <svg class="w-7" width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M15.2224 13.0155L14.685 13.5506C14.685 13.5506 13.4057 14.8216 9.91508 11.3511C6.42448 7.88061 7.70378 6.60958 7.70378 6.60958L8.04162 6.27174C8.87676 5.44251 8.9559 4.11006 8.22707 3.13671L6.7387 1.14866C5.83622 -0.0562118 4.09388 -0.21568 3.06029 0.812007L1.20572 2.65476C0.694241 3.16506 0.351678 3.82419 0.393022 4.55657C0.499335 6.43121 1.34747 10.4628 6.0772 15.1666C11.094 20.1538 15.8012 20.3522 17.7255 20.1727C18.335 20.116 18.8642 19.8065 19.2907 19.3813L20.968 17.7133C22.102 16.5876 21.7831 14.6563 20.3325 13.8684L18.0763 12.641C17.1242 12.1248 15.9666 12.276 15.2224 13.0155Z"
+                      fill="black"
+                    />
+                  </svg>
+                  <div>
+                    <p class="fw-normal lh-sm mb-0 fs-14">+8801341776458</p>
+                  </div>
+                </div>
+                <div class="d-flex align-items-center gap-3 bg-soft-blue rounded-3 p-2 mb-3">
+                  <svg class="w-7" width="31" height="24" viewBox="0 0 31 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M27.2808 0.105469H3.52078C1.88728 0.105469 0.565631 1.44197 0.565631 3.07547L0.550781 20.8955C0.550781 22.529 1.88728 23.8655 3.52078 23.8655H27.2808C28.9143 23.8655 30.2508 22.529 30.2508 20.8955V3.07547C30.2508 1.44197 28.9143 0.105469 27.2808 0.105469ZM26.6868 6.41672L16.1878 12.9804C15.7126 13.2774 15.0889 13.2774 14.6137 12.9804L4.11478 6.41672C3.96588 6.33313 3.83548 6.2202 3.73149 6.08475C3.62749 5.94931 3.55206 5.79417 3.50976 5.62873C3.46745 5.46329 3.45916 5.29099 3.48537 5.12225C3.51159 4.95352 3.57177 4.79185 3.66227 4.64705C3.75278 4.50224 3.87172 4.3773 4.01191 4.2798C4.1521 4.18229 4.31061 4.11424 4.47786 4.07977C4.6451 4.0453 4.81761 4.04512 4.98492 4.07925C5.15224 4.11338 5.31089 4.1811 5.45128 4.27832L15.4008 10.5005L25.3503 4.27832C25.4907 4.1811 25.6493 4.11338 25.8166 4.07925C25.984 4.04512 26.1565 4.0453 26.3237 4.07977C26.491 4.11424 26.6495 4.18229 26.7897 4.2798C26.9298 4.3773 27.0488 4.50224 27.1393 4.64705C27.2298 4.79185 27.29 4.95352 27.3162 5.12225C27.3424 5.29099 27.3341 5.46329 27.2918 5.62873C27.2495 5.79417 27.1741 5.94931 27.0701 6.08475C26.9661 6.2202 26.8357 6.33313 26.6868 6.41672Z"
+                      fill="black"
+                    />
+                  </svg>
+                  <div>
+                    <a class="fw-normal lh-sm mb-0 fs-14 text-black" href="mailto:support@bizzmakr.com">support@bizzmakr.com</a>
+                  </div>
+                </div>
+                <div class="d-flex align-items-center gap-3 bg-soft-blue rounded-3 p-2 mb-3">
+                  <svg class="w-10" width="40" height="35" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_605_4039)">
+                      <path d="M23.0696 24.3648V6.54481H18.2096V1.68481H3.62965V24.3648H0.389648V25.9848H11.7296V21.1248H14.9696V25.9848H26.3096V24.3648H23.0696ZM10.1096 17.8848H6.86965V14.6448H10.1096V17.8848ZM10.1096 13.0248H6.86965V9.78481H10.1096V13.0248ZM10.1096 8.16481H6.86965V4.92481H10.1096V8.16481ZM14.9696 17.8848H11.7296V14.6448H14.9696V17.8848ZM14.9696 13.0248H11.7296V9.78481H14.9696V13.0248ZM14.9696 8.16481H11.7296V4.92481H14.9696V8.16481ZM21.4496 17.8848H18.2096V14.6448H21.4496V17.8848ZM21.4496 13.0248H18.2096V9.78481H21.4496V13.0248Z" fill="black" />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_605_4039">
+                        <rect width="25.92" height="25.92" fill="white" transform="translate(0.389648 0.0651855)" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                  <div>
+                    <p class="fw-normal lh-sm mb-0 fs-14">House#197, Smith Road, Puratan Kasha, Jashore, Bangladesh.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- /.widget -->
+            </div>
+            <!-- /column -->
+            <div class="col-12">
+              <p class="fs-22 fw-bold mb-2 mt-4 text-center">Secured with SSL</p>
+              <img class="img-fluid" src="./assets/img/payment-method.png" alt="" />
+            </div>
+          </div>
+          <!--/.row -->
+        </div>
+        <!-- /.container -->
+        <div class="container-fluid bg-primary py-1">
+          <p class="mb-0 text-center px-4 text-white fs-26 fs-sm-65 fw-800">Bizzmakr</p>
         </div>
         <!-- /.container -->
       </footer>
